added lab logo ideas

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -57,7 +57,7 @@
 \end{fullwidth}
 }
 
-\newcommand{\ourschool}{OUR SCHOOL}
+\newcommand{\ourschool}{Dartmouth College}
 
 \newcommand{\blankpage}{\newpage\hbox{}\thispagestyle{empty}\newpage} % Command to insert a blank page
 
