minor changes to lab manual

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -246,7 +246,8 @@ primariy concerned with supporting or managing the lab's research
 objectives.  The research-focused levels of the lab hierarchy are
 defined as follows: \newcounter{levels}
 \begin{list}{R\arabic{levels}-$x$:~}{\usecounter{levels}}
-\item \textbf{Undergraduate research assistants.}  This category
+\item \textbf{Undergraduate research
+    assistants.}\marginnote{Research-focused levels of the lab hierarchy}  This category
   includes undergraduate students (currently enrolled at \ourschool)
   who are pursing an active undergraduate research program in the lab.
   An active undergraduate research program may include for-credit
@@ -278,7 +279,7 @@ you joined the lab, in years.  The supporting and manageareal roles
 in the lab are:
 \newcounter{supportlevels}
 \begin{list}{S\arabic{supportlevels}-$x$:~}{\usecounter{supportlevels}}
-\item \textbf{Administrative support staff.}  This category includes
+\item \textbf{Administrative support staff.}\marginnote{Support-focused levels of the lab hierarchy}  This category includes
   lab members whose primary roles, regardless of their academic
   degree, are to provide administrative assistance (e.g.\ assisting with
   grant or paper submissions, registration, scheduling, coordination)
@@ -297,7 +298,7 @@ in the lab are:
 In addition to the above components of the lab hierarchy, there's one more
 lab position that plays an important role:
 \newcounter{directorlevel}
-\begin{list}{J\arabic{directorlevel}:~}{\usecounter{directorlevel}}
+\begin{list}{J\arabic{directorlevel}-$\infty$:~}{\usecounter{directorlevel}}
 \item \textbf{Lab director.}  ``\textit{There can be only one...}''
   Becoming the lab director entails convincing a search committee
   at this or another department/university that you have what it takes to be a
@@ -412,7 +413,8 @@ take:
   consistent; the project will be referred to using this name from now on.
 \item Create a
   \href{https://redbooth.com/}{RedBooth}\marginnote{\texttt{TASK:}
-    Create a RedBooth account if you don't already have one.} project and add
+    Create a RedBooth account if you don't already have one.  Make
+    sure you add yourself to the lab's group.} project and add
   all team members.  See \textit{Task management using Redbooth} for
   detailed instructions on how to organize the new Redbooth project.
 \item Create a \href{https://bitbucket.org/}{Bitbucket}\marginnote{\texttt{TASK:}
@@ -434,7 +436,14 @@ take:
   etc.) should be added to the spreadsheet as they become known.  Send
   a link to the spreadsheet to Jeremy and cc the project PI (if not
   Jeremy).
-\item Create a spreadsheet outlining all project personnel and their project roles.  This should
+\item Create a \href{https://docs.google.com/}{Google Docs}\marginnote{\texttt{TASK:}
+    Create a Google account if you don't already have one (or if you'd
+    like to create a new one for lab-only use).  Make sure your
+    account is linked with the lab's Google Apps account, which will
+    give you access to extra storage space and some other additional functionality.}
+  spreadsheet outlining all project personnel and their project roles,
+  and share it with all team member (the PI may ask other project
+  members to fill in personal information and contact details).  This should
   include each project member's:
 \begin{itemize}
 \item Full name
@@ -446,14 +455,16 @@ take:
 \item Proposed authorship order (this will apply to any project communication-- manuscripts,
   abstracts, talks, etc.)
 \item Contact information (preferred email, preferred phone number, preferred mailing address,
-  and primary office number or address if different from mailing address)
+  and primary office number or address if different from mailing
+  address)
+\item Acknowledgement that the project member has joined the project,
+  looked over (and corrected as necessary) their information, 
+  and accepts their project role.  This column must be filled out
+  individually by each team member (each team member should type their
+  initials into the project field).
 \end{itemize}
-Add a link to the personnel spreadsheet in Redbooth.
-\item Create a \href{https://calendar.google.com}{Google Calendar}\marginnote{\texttt{TASK:}
-    Create a Google account if you don't already have one (or if you'd
-    like to create a new one for lab-only use).  Make sure your
-    account is linked with the lab's Google Apps account, which will
-    give you access to extra storage space and some other additional functionality.} for
+Add a link to the personnel spreadsheet in \href{https://redbooth.com/}{RedBooth}.
+\item Create a \href{https://calendar.google.com}{Google Calendar} for
   project meetings and events.
 \item Add a line to your lab snippet template for this project.  (See
   \textit{Lab Snippets}.)
@@ -467,7 +478,8 @@ Add a link to the personnel spreadsheet in Redbooth.
   Bitbucket.  If any team members are not current lab members, also
   include a brief description of what Redbooth and Bitbucket are.  (A
   project management tool and version control system, respectively.)
-\item A iCal link to the project's Google calendar.
+\item A iCal link to the project's Google calendar.  Instructions for
+  sharing calendars may be found \href{https://support.google.com/calendar/answer/37082?hl=en}{here}.
 \item A note that you have outlined expected project roles and
   responsibilities in Redbooth, and that these roles and
   responsibilities will be discussed during the first project
@@ -479,6 +491,7 @@ Add a link to the personnel spreadsheet in Redbooth.
 
 \newpage
 \section{Joining a project}
+
 
 
 %create shared evernote notebook; invite team members
